# diffusion

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: stale.yml
.github/workflows/: main.yml
notebooks/: visualize.ipynb
src/: run.py
src/dataloaders/: dataloader.py  hm_dataloader.py  sprite_dataloader.py
src/diffuser/: diffuser.py
src/layers/: layers.py
src/models/: decoder.py  encoder.py  unet.py
src/trainers/: trainer.py
src/utils/: utils.py
tests/: test_dummy.py
